--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16999,6 +16999,17 @@ body {
   line-height: 38px;
 }
 
+/* 回复列表 */
+
+.topic-reply a {
+  color: inherit;
+}
+
+.topic-reply .meta {
+  font-size: 0.9em;
+  color: #b3b3b3;
+}
+
 /* Add container and footer space */
 
 #app > div.container {
