--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -126,6 +126,19 @@ body {
   }
 }
 
+/* 回复列表 */
+
+.topic-reply {
+  a {
+    color: inherit;
+  }
+
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
+  }
+}
+
 /* Add container and footer space */
 #app > div.container {
   margin-bottom: 100px;
